fix: 修复 ace-tool MCP 配置和 subagents 路径问题 (v1.3.7)
修复 1: ace-tool MCP 配置兼容性
- 改用参数传递模式（--base-url, --token）替代环境变量
- 修复代码准备了参数数组但未使用的问题
- 提高兼容性，不依赖 ace-tool 的环境变量支持

修复 2: Subagents 安装路径修正
- 从 ~/.claude/commands/ccg/agents/ 修正为 ~/.claude/agents/ccg/
- 确保 Claude Code 可以正确识别 subagents
- 更新 TypeScript 和 Python 安装器

修改文件:
- src/utils/installer.ts (installAceTool + agents 路径)
- config.json (添加 agents 安装配置)
- package.json (版本号 1.3.6 → 1.3.7)
- CHANGELOG.md (添加详细更新日志)

--- a/config.json
+++ b/config.json
@@ -16,6 +16,12 @@
           "description": "安装 /ccg:xxx 命令 (17个斜杠命令)"
         },
         {
+          "type": "copy_dir",
+          "source": "templates/commands/agents",
+          "target": "agents/ccg",
+          "description": "安装 CCG subagents 到 ~/.claude/agents/ccg/ (4个子智能体)"
+        },
+        {
           "type": "build_go",
           "source": "codeagent-wrapper",
           "binary": "codeagent-wrapper",
